FreeST/test/Programs/ValidTests/Functional/recData/recData.fst
data T  = C T

-- Not bound to terminate
main : T
main = C main
