FreeST/test/Programs/InvalidTests/Linearity/LinRecFunction/LinRecFunction.fst
data T : 1T = C T

f : T
f = C f

main : Int
main = 23
